--- a/applications/dashboard/scss/extensions/_alert.scss
+++ b/applications/dashboard/scss/extensions/_alert.scss
@@ -1,3 +1,9 @@
+// Alerts
+//
+// Find the dashboard alert styling here.
+//
+// Styleguide 14.
+
 .CasualMessage {
   @extend .alert;
   @extend .alert-success;
