--- a/applications/dashboard/scss/maps/_dashboard.scss
+++ b/applications/dashboard/scss/maps/_dashboard.scss
@@ -1,23 +1,24 @@
-@import '../analytics';
-@import '../buttons';
-@import '../card';
-@import '../chart-svg';
-@import '../components';
-@import '../daterangepicker';
-@import '../dropdown';
-@import '../footer';
-@import '../forms';
-@import '../helpers';
-@import '../images';
-@import '../media';
-@import '../mixins';
-@import '../modal';
-@import '../nav';
-@import '../navbar';
-@import '../panel';
-@import '../scaffold';
-@import '../tables';
-@import '../toasters';
-@import '../toolbar';
-@import '../tweaks';
-@import '../type';
+@import '../src/analytics';
+@import '../src/buttons';
+@import '../src/card';
+@import '../src/chart-svg';
+@import '../src/daterangepicker';
+@import '../src/dropdown';
+@import '../src/dropdowns';
+@import '../src/footer';
+@import '../src/forms';
+@import '../src/helpers';
+@import '../src/icons';
+@import '../src/media';
+@import '../src/mixins';
+@import '../src/modal';
+@import '../src/nav';
+@import '../src/navbar';
+@import '../src/panel';
+@import '../src/scaffold';
+@import '../src/tables';
+@import '../src/toasters';
+@import '../src/toolbar';
+@import '../src/tutorials';
+@import '../src/tweaks';
+@import '../src/type';
