--- a/applications/dashboard/template/public/kss.css
+++ b/applications/dashboard/template/public/kss.css
@@ -1,77 +1,99 @@
+
 @font-face {
   font-family: "vanillicon";
-  src: url("resources/fonts/vanillicon/vanillicon.eot");
-  src: url("resources/fonts/vanillicon/vanillicon.eot?#iefix") format("embedded-opentype"), url("resources/fonts/vanillicon/vanillicon.woff") format("woff"), url("resources/fonts/vanillicon/vanillicon.ttf") format("truetype"), url("resources/fonts/vanillicon/vanillicon.svg?#vanillicon") format("svg");
+  src: url("./resources/fonts/vanillicon/vanillicon.eot");
+  src: url("./resources/fonts/vanillicon/vanillicon.eot?#iefix") format("embedded-opentype"), url("./resources/fonts/vanillicon/vanillicon.woff") format("woff"), url("./resources/fonts/vanillicon/vanillicon.ttf") format("truetype"), url("./resources/fonts/vanillicon/vanillicon.svg?#vanillicon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
-body {
-  padding-top: 70px;
-}
-footer {
-  padding: 30px 0;
+.vanilla-logo.vanilla-logo-white {
+  background-image: url(./resources/images/vanilla-white.svg);
 }
 
-.kss-example {
-  padding-top: 1em;
-  padding-bottom: 1em;
-  min-height: 4em;
-  position: relative;
-}
-.kss-example:after,
-.kss-example:before {
-  clear: both;
-  content: " ";
-  display: table;
+.vanilla-logo {
+  background-image: url(./resources/images/vanilla-black.svg);
 }
 
-/**
- * Off Canvas
- *
- * TODO: Fix this to work properly.
- */
-@media screen and (max-width: 767px) {
-  .row-offcanvas {
-    position: relative;
-    -webkit-transition: all .25s ease-out;
-         -o-transition: all .25s ease-out;
-            transition: all .25s ease-out;
-  }
-
-  .row-offcanvas-right {
-    right: 0;
-  }
-
-  .row-offcanvas-left {
-    left: 0;
-  }
-
-  .row-offcanvas-right
-  .sidebar-offcanvas {
-    right: -50%; /* 6 columns */
-  }
-
-  .row-offcanvas-left
-  .sidebar-offcanvas {
-    left: -50%; /* 6 columns */
-  }
-
-  .row-offcanvas-right.active {
-    right: 50%; /* 6 columns */
-  }
-
-  .row-offcanvas-left.active {
-    left: 50%; /* 6 columns */
-  }
-
-  .sidebar-offcanvas {
-    position: absolute;
-    top: 0;
-    width: 50%; /* 6 columns */
-  }
+.kss-example-heading {
+  /*border-bottom: 0.0625rem solid #555a62;*/
 }
 
-.nav-fixed {
- position: fixed;
+.kss-example-heading-wrap {
+  margin-bottom: .5rem;
+}
+
+.kss-component-description {
+  background-color: #f9fdfe;
+  border-top: 0.0625rem solid #e7e8e9;
+}
+
+.navbar-title {
+  color: #fff;
+  font-weight: 100;
+  font-size: 20px;
+  margin-left: 1rem;
+}
+
+.navbar-title:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+.navbar .navbar-brand {
+  justify-content: flex-start;
+}
+
+.navbar {
+  height: 60px !important;
+}
+
+.navbar-brand {
+  display: flex !important;
+}
+
+.ex-block {
+  width: 200px;
+  padding: 1rem;
+  color: #fff;
+  font-size: 1rem;
+  background-color: grey;
+}
+
+.ex-inline {
+  font-size: 0;
+}
+
+.ex-inline .ex-block {
+  display: inline-block;
+}
+
+.ex-yellow {
+  background-color: yellow;
+}
+
+.ex-red {
+  background-color: red;
+}
+
+.ex-green {
+  background-color: green;
+}
+
+.ex-blue {
+  background-color: blue;
+}
+
+.ex-block-flex {
+  padding: 1rem;
+  color: #fff;
+  flex-basis: 25%;
+}
+
+.ex-block-wide {
+  flex-basis: 50%;
+}
+
+.ex-flex {
+  display: flex;
 }
