Refactor tables SCSS and add styleguide entries.

--- a/applications/dashboard/scss/maps/_extensions.scss
+++ b/applications/dashboard/scss/maps/_extensions.scss
@@ -1,4 +1,5 @@
 @import '../extensions/alert';
 @import '../extensions/buttons';
+@import '../extensions/feed';
 @import '../extensions/forms';
 @import '../extensions/modal';
